tests/error/localclass01.py
#Local class definition in the function is not allowed
def func():
    class C:
        pass
    pass
